--- a/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
@@ -132,7 +132,7 @@ msgstr "ソリューションは `getting-started-reactive` と `getting-started
 #: upstream/_guides/getting-started-reactive.adoc:45
 #, no-wrap
 msgid "The multiple reactive facets of Quarkus"
-msgstr "クオークスの複数のリアクティブ断面"
+msgstr "Quarkus の複数のリアクティブ断面"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:51
