--- a/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
@@ -1190,7 +1190,7 @@ msgstr "Vert.xクライアントの使用"
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:665
 msgid "The previous example uses a _service_ provided by Quarkus.  Also, you can use Vert.x clients directly."
-msgstr "先ほどの例では、Quarkusが提供する _サービスを_ 使用しています。また、Vert.xクライアントを直接使用することもできます。"
+msgstr "先ほどの例では、Quarkusが提供する _サービス_ を使用しています。また、Vert.xクライアントを直接使用することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:667
