--- a/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
@@ -89,7 +89,7 @@ msgstr "IDE"
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:28
 msgid "JDK 8 or 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 8 または 11+ がインストールされ、 `JAVA_HOME` が適切に設定されています。"
+msgstr "JDK 8 または 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:29
