--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,4 @@
-Filename, Fuzzy Messages, Total Message, Achievement
+Filename, Fuzzy Messages, Total Messages, Achievement
 l10n/po/ja_JP/_posts/2021-02-11-quarkus-1-11-3-final-released.adoc.po, 0, 13,100%
 l10n/po/ja_JP/_posts/2021-02-10-resteasy-reactive-faq.adoc.po, 0, 60,100%
 l10n/po/ja_JP/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc.po, 0, 18,100%
