用語統一: extension->エクステンション

--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -136,12 +136,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:58
 msgid "This command generates a Maven project, importing the Reactive Messaging and Kafka connector extensions."
-msgstr "このコマンドは、Reactive Messaging と Kafka コネクタ extension をインポートして Maven プロジェクトを生成します。"
+msgstr "このコマンドは、Reactive Messaging と Kafka コネクタエクステンションをインポートして Maven プロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:61
 msgid "If you already have your Quarkus project configured, you can add the `smallrye-reactive-messaging-kafka` extension to your project by running the following command in your project base directory:"
-msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに `smallrye-reactive-messaging-kafka` extension を追加することができます。"
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに `smallrye-reactive-messaging-kafka` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:65
@@ -777,7 +777,7 @@ msgstr "Kafka のヘルスチェック"
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:391
 msgid "If you are using the `quarkus-smallrye-health` extension, `quarkus-kafka` can add a readiness health check to validate the connection to the broker. This is disabled by default."
-msgstr "`quarkus-smallrye-health` extension を使用している場合、 `quarkus-kafka` は、ブローカーへの接続を検証するために準備状態の健全性チェックを追加することができます。これはデフォルトでは無効になっています。"
+msgstr "`quarkus-smallrye-health` エクステンションを使用している場合、 `quarkus-kafka` は、ブローカーへの接続を検証するためにレディネスヘルスチェックを追加することができます。これはデフォルトでは無効になっています。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:393
@@ -896,7 +896,7 @@ msgstr "Jackson によるシリアライズ"
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:456
 msgid "First, you need to include the `quarkus-jackson` extension (if you already use the `quarkus-resteasy-jackson` extension, this is not needed)."
-msgstr "まず、 `quarkus-jackson` の extension を含める必要があります（すでに `quarkus-resteasy-jackson` の拡張子を使用している場合は、これは必要ありません）。"
+msgstr "まず、 `quarkus-jackson` のエクステンションを含める必要があります（すでに `quarkus-resteasy-jackson` のエクステンションを使用している場合は、これは必要ありません）。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:463
@@ -981,7 +981,7 @@ msgstr "JSON-B によるシリアライズ"
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:504
 msgid "First, you need to include the `quarkus-jsonb` extension (if you already use the `quarkus-resteasy-jsonb` extension, this is not needed)."
-msgstr "まず、 `quarkus-jsonb` の拡張子を含める必要があります（すでに `quarkus-resteasy-jsonb` の拡張子を使用している場合は、これは必要ありません）。"
+msgstr "まず、 `quarkus-jsonb` のエクステンションを含める必要があります（すでに `quarkus-resteasy-jsonb` のエクステンションを使用している場合は、これは必要ありません）。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:511
