--- a/l10n/po/ja_JP/_guides/funqy-knative-events.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-knative-events.adoc.po
@@ -150,7 +150,7 @@ msgstr "コード"
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:69
 msgid "Let's start looking at our quickstart code so that you can understand how Knative Events map to Funqy.  Open up {quickstarts-tree-url}/funqy-quickstarts/funqy-knative-events-quickstart/src/main/java/org/acme/funqy/SimpleFunctionChain.java[SimpleFunctionChain.java]"
-msgstr "Knative イベントがどのように Funqy にマップされるかを理解するために、クイックスタートのコードを見てみましょう。クイックスタートコードは、{quickstarts-tree-url}/funqy-quickstarts/funqy-knative-events-quickstart/src/main/java/org/acme/funqy/SimpleFunctionChain.java[SimpleFunctionChain.java]を開いてください。"
+msgstr "Knative イベントがどのように Funqy にマップされるかを理解するために、クイックスタートのコードを見てみましょう。クイックスタートコードは、 {quickstarts-tree-url}/funqy-quickstarts/funqy-knative-events-quickstart/src/main/java/org/acme/funqy/SimpleFunctionChain.java[SimpleFunctionChain.java] を開いてください。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:71
@@ -206,7 +206,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:108
 msgid "The `configChain` function has its Cloud Event mapping changed by configuration within {quickstarts-tree-url}/funqy-quickstarts/funqy-knative-events-quickstart/src/main/resources/application.properties[application.properties]."
-msgstr "`configChain` 関数は、{quickstarts-tree-url}/funqy-quickstarts/funqy-knative-events-quickstart/src/main/resources/application.properties[application.properties]内の設定により、 Cloud Event のマッピングが変更されています。"
+msgstr "`configChain` 関数は、 {quickstarts-tree-url}/funqy-quickstarts/funqy-knative-events-quickstart/src/main/resources/application.properties[application.properties] 内の設定により、 Cloud Event のマッピングが変更されています。"
 
 #. type: delimited block -
 #: upstream/_guides/funqy-knative-events.adoc:115
@@ -326,7 +326,7 @@ msgstr "Maven"
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:185
 msgid "If you look at the {quickstarts-tree-url}/funqy-quickstarts/funqy-knative-events-quickstart/pom.xml[pom], you'll see that it is a typical Quarkus pom that pulls in one funqy dependency"
-msgstr "クイックスタートのツリーのURL}/funqy-quickstarts/funqy-knative-events-quickstart/pom.xml[pom]を見ると、典タイプ的なQuarkusのpomで、以下のような1つのfunqy依存関係を持っていることがわかるでしょう。"
+msgstr "{quickstarts-tree-url}/funqy-quickstarts/funqy-knative-events-quickstart/pom.xml[pom] を見ると、典型的なQuarkusのpomで、以下のような1つのfunqy依存関係を持っていることがわかるでしょう。"
 
 #. type: delimited block -
 #: upstream/_guides/funqy-knative-events.adoc:192
