用語統一: extension->エクステンション

--- a/l10n/po/ja_JP/_guides/funqy-knative-events.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-knative-events.adoc.po
@@ -28,7 +28,7 @@ msgstr "Quarkus - Funqy Knative Events バインディング"
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:13
 msgid "Quarkus Funqy link:https://knative.dev/docs/eventing[Knative Events] builds off of the link:funqy-http[Funqy HTTP] extension to allow you to route and process Knative Events within a Funqy function."
-msgstr "Quarkus Funqy link:https://knative.dev/docs/eventing[Knative Events]は 、link:funqy-http[Funqy HTTP] 拡張機能をベースに構築されており、Funqy関数内でKnative Eventsをルーティングして処理することができます。"
+msgstr "Quarkus Funqy link:https://knative.dev/docs/eventing[Knative Events]は 、link:funqy-http[Funqy HTTP] エクステンションをベースに構築されており、Funqy関数内でKnative Eventsをルーティングして処理することができます。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:16
