--- a/l10n/po/ja_JP/_guides/platform-include.adoc.po
+++ b/l10n/po/ja_JP/_guides/platform-include.adoc.po
@@ -3,21 +3,20 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-22 00:17+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: delimited block =
 #: upstream/_guides/platform-include.adoc:4
-#, fuzzy
 msgid "This extension is developed by a third party and is part of the Quarkus Platform."
-msgstr "この拡張機能はサードパーティによって開発されたもので、Quarkus Platformの一部です。"
+msgstr "このエクステンションはサードパーティによって開発されたもので、Quarkus Platformの一部です。"
