--- a/l10n/po/ja_JP/_guides/lifecycle.adoc.po
+++ b/l10n/po/ja_JP/_guides/lifecycle.adoc.po
@@ -3,25 +3,25 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-22 00:41+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/lifecycle.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Application Initialization and Termination"
 msgstr "Quarkus - アプリケーションの初期化と終了"
 
@@ -63,9 +63,8 @@ msgstr "このガイドを完成させるには、以下が必要です："
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:23
-#, fuzzy
 msgid "less than 10 minutes"
-msgstr "１０分足らず"
+msgstr "10分未満"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:24
@@ -84,7 +83,7 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/lifecycle.adoc:27
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
@@ -105,7 +104,7 @@ msgstr "ソリューションは `lifecycle-quickstart`  {quickstarts-tree-url}/
 
 #. type: Title ==
 #: upstream/_guides/lifecycle.adoc:36
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -148,7 +147,6 @@ msgstr "`native`  と `jvm`  の両方のモードに対応した `Dockerfile`  
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:56
-#, fuzzy
 msgid "the application configuration file"
 msgstr "アプリケーション設定ファイル"
 
@@ -159,9 +157,8 @@ msgstr "`org.acme.lifecycle.GreetingResource`  リソース"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:58
-#, fuzzy
 msgid "an associated test"
-msgstr "関連試験"
+msgstr "関連するユニットテスト"
 
 #. type: Title ==
 #: upstream/_guides/lifecycle.adoc:59
