--- a/l10n/po/ja_JP/_guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_guides/optaplanner.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-11 02:12+0000\n"
+"POT-Creation-Date: 2021-02-23 02:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -258,13 +258,11 @@ msgid ""
 "  </dependencies>\n"
 msgstr ""
 
-#. On the other hand, in Gradle, your `build.gradle` file contains these
-#. dependencies:
+#. On the other hand, in Gradle, your `build.gradle` file contains these dependencies:
 #. [source,groovy,subs=attributes+]
 #. ----
 #. dependencies {
-#.     implementation enforcedPlatform("io.quarkus:quarkus-universe-
-#. bom:{quarkus-version}")
+#.     implementation enforcedPlatform("io.quarkus:quarkus-universe-bom:{quarkus-version}")
 #.     implementation 'io.quarkus:quarkus-resteasy'
 #.     implementation 'io.quarkus:quarkus-resteasy-jackson'
 #.     implementation 'org.optaplanner:optaplanner-quarkus'
