--- a/l10n/po/ja_JP/security.adoc.po
+++ b/l10n/po/ja_JP/security.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:05+0900\n"
+"POT-Creation-Date: 2021-02-23 02:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -36,8 +36,7 @@ msgstr ""
 "permalink: /security/\n"
 "---\n"
 
-#.     Content copied from
-#. https://github.com/quarkusio/quarkus/blob/master/SECURITY.md
+#.     Content copied from https://github.com/quarkusio/quarkus/blob/master/SECURITY.md 
 #.     Edit there too
 #. type: Plain text
 #: upstream/security.adoc:13
