Add machine translation

--- a/l10n/po/ja_JP/_guides/amazon-lambda-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-lambda-http.adoc.po
@@ -125,8 +125,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:56
+#, fuzzy
 msgid "This extension has recently been upgraded to use API Gateway V2.  If you need to still use V1 of the API Gateway use the `quarkus-amazon-lambda-http-v1` extension instead."
-msgstr ""
+msgstr "この拡張機能は最近、API Gateway V2を使用するようにアップグレードされました。まだ API Gateway V1 を使用する必要がある場合は、代わりに `quarkus-amazon-lambda-http-v1` 拡張モジュールを使用してください。"
 
 #. type: Title ==
 #: upstream/_guides/amazon-lambda-http.adoc:57
@@ -257,8 +258,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:124
+#, fuzzy
 msgid "Answer all the questions and your lambda will be deployed and the necessary hooks to the API Gateway will be set up. If everything deploys successfully, the root URL of your microservice will be output to the console.  Something like this:"
-msgstr ""
+msgstr "すべての質問に答えると、ラムダがデプロイされ、API Gatewayへの必要なフックが設定されます。すべてが正常にデプロイされると、マイクロサービスのルート URL がコンソールに出力されます。このような感じです。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda-http.adoc:129
@@ -283,19 +285,21 @@ msgstr "バイナリー型のレスポンスは自動的にbase64でエンコー
 
 #. type: Title ==
 #: upstream/_guides/amazon-lambda-http.adoc:139
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Deploying a native executable"
-msgstr ""
+msgstr "ネイティブ実行ファイルのデプロイ"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:142
+#, fuzzy
 msgid "To deploy a native executable, you must build it with Graal."
-msgstr ""
+msgstr "ネイティブな実行ファイルをデプロイするには、Graalを使ってビルドする必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:149
+#, fuzzy
 msgid "You can then test the executable locally with sam local"
-msgstr ""
+msgstr "その後、ローカルで sam local を使って実行ファイルをテストすることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda-http.adoc:153
