--- a/l10n/po/ja_JP/_guides/azure-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/azure-functions-http.adoc.po
@@ -39,8 +39,9 @@ msgstr "1 つの azure 機能デプロイメントでは、JAX-RS、サーブレ
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:19
+#, fuzzy
 msgid "Only text based media types are supported at the moment as Azure Functions HTTP Trigger for Java does not support a binary format"
-msgstr ""
+msgstr "Azure Functions HTTP Trigger for Javaがバイナリ形式をサポートしていないため、現時点ではテキストベースのメディアタイプのみがサポートされています。"
 
 #. type: Title ==
 #: upstream/_guides/azure-functions-http.adoc:20
