--- a/l10n/po/ja_JP/_guides/class-loading-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/class-loading-reference.adoc.po
@@ -319,14 +319,15 @@ msgstr "これは、エクステンションがこれらのアーティファク
 
 #. type: Title ==
 #: upstream/_guides/class-loading-reference.adoc:176
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Configuring Class Loading"
-msgstr ""
+msgstr "クラスの読み込みを設定する"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:181
+#, fuzzy
 msgid "It is possible to configure some aspects of class loading in dev and test mode. This can be done using `application.properties`.  Note that class loading config is different to normal config, in that it does not use the standard Quarkus config mechanisms (as it is needed too early), so only supports `application.properties`. The following options are supported."
-msgstr ""
+msgstr "開発モードとテストモードでクラスの読み込みのいくつかの側面を設定することができます。これは、 `application.properties` を使用して行うことができます。クラスローディングの設定は通常の設定とは異なり、標準のQuarkusの設定メカニズムを使用していないため（必要な時期が早すぎるため）、 `application.properties` のみをサポートしていることに注意してください。以下のオプションがサポートされています。"
 
 #. type: Title ==
 #: upstream/_guides/class-loading-reference.adoc:185
