--- a/l10n/po/ja_JP/_guides/infinispan-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/infinispan-client.adoc.po
@@ -266,9 +266,9 @@ msgstr ""
 
 #. type: Block title
 #: upstream/_guides/infinispan-client.adoc:150
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "BigDecimalAdapter.java"
-msgstr ""
+msgstr "BigDecimalAdapter.java"
 
 #. type: delimited block -
 #: upstream/_guides/infinispan-client.adoc:159
