--- a/l10n/po/ja_JP/_guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer.adoc.po
@@ -583,13 +583,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:313
+#, fuzzy
 msgid "The method returns a `Uni`"
-msgstr ""
+msgstr "このメソッドは `Uni`"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:314
+#, fuzzy
 msgid "Transform the `Uni<Void>` returned by `MailTemplate` into `Unit<Response>`"
-msgstr ""
+msgstr "`MailTemplate` が返す `Uni&amp;lt;Void&amp;gt;` を `Unit&amp;lt;Response&amp;gt;`"
 
 #. type: Title ==
 #: upstream/_guides/mailer.adoc:315
