--- a/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
@@ -1001,29 +1001,33 @@ msgstr "Uber-Jarの最終的な名前は、Mavenのビルド設定 `finalName`  
 
 #. type: Title ===
 #: upstream/_guides/maven-tooling.adoc:521
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Using fast-jar"
-msgstr ""
+msgstr "ファストジャーの使用"
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:524
+#, fuzzy
 msgid "When configuring `quarkus.package.type=fast-jar` (which will become the default soon), then the result of executing `./mvnw package` is a new directory under `target` named `quarkus-app`."
-msgstr ""
+msgstr "`quarkus.package.type=fast-jar` を設定している場合 (これはもうすぐデフォルトになります)、 `./mvnw package` を実行した結果、 `target` の下に `quarkus-app`."
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:526
+#, fuzzy
 msgid "You can run the application using: `java -jar target/quarkus-app/quarkus-run.jar`."
-msgstr ""
+msgstr "アプリケーションを実行するには、次のようにします: `java -jar target/quarkus-app/quarkus-run.jar`."
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:529
+#, fuzzy
 msgid "In order to successfully run the produced jar, you need to have the entire contents of the `quarkus-app` directory. If any of the files are missing, the application will not start or might not function correctly."
-msgstr ""
+msgstr "生成された jar を正常に実行するためには、 `quarkus-app` ディレクトリのすべての内容が必要です。いずれかのファイルが欠落していると、アプリケーションが起動しなかったり、正しく機能しない可能性があります。"
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:533
+#, fuzzy
 msgid "The `fast-jar` packaging results in creating an artifact that starts a little faster and consumes slightly less memory than a legacy Quarkus jar because it has indexed information about which dependency jar contains classes and resources. It can thus avoid the lookup into potentially every jar on the classpath that the legacy jar necessitates, when loading a class or resource."
-msgstr ""
+msgstr "`fast-jar` パッケージングでは、どの依存関係のjarにクラスやリソースが含まれているかという情報がインデックス化されているため、レガシーのQuarkus jarよりも起動が少し速く、メモリ消費量もわずかに少ないアーティファクトを作成できます。このため、クラスやリソースをロードする際に、レガシージャーが必要とするクラスパス上のすべてのジャーを検索する必要がなくなります。"
 
 #. type: Title ===
 #: upstream/_guides/maven-tooling.adoc:535
