--- a/l10n/po/ja_JP/_guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb-panache.adoc.po
@@ -1060,8 +1060,9 @@ msgstr "`status in ?1` は `{'status':{$in: [?1]}}`"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache.adoc:519
+#, fuzzy
 msgid "MongoDB queries must be valid JSON documents, using the same field multiple times in a query is not allowed using PanacheQL as it would generate an invalid JSON (see link:https://github.com/quarkusio/quarkus/issues/12086[this issue on github])."
-msgstr ""
+msgstr "MongoDB のクエリは有効な JSON ドキュメントでなければなりません。同じフィールドをクエリで複数回使うと無効な JSON が生成されてしまうので、PanacheQL を使うことはできません ( link:https://github.com/quarkusio/quarkus/issues/12086[github のこの問題を]参照してください)。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache.adoc:523
