--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -677,13 +677,15 @@ msgstr "そうでなければ、ブラウザのキャッシュマネージャー
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:288
+#, fuzzy
 msgid "You can also set a `quarkus.oidc.authentication.cookie-path-header` property if the cookie path needs to be set dynamically.  For example, setting `quarkus.oidc.authentication.cookie-path-header=X-Forwarded-Prefix` means that the value of HTTP `X-Forwarded-Prefix` header will be used to set a cookie path."
-msgstr ""
+msgstr "クッキーパスを動的に設定する必要がある場合は、 `quarkus.oidc.authentication.cookie-path-header` プロパティを設定することもできます。例えば、 `quarkus.oidc.authentication.cookie-path-header=X-Forwarded-Prefix` を設定すると、HTTP `X-Forwarded-Prefix` ヘッダーの値がクッキーパスを設定するために使用されることを意味します。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:290
+#, fuzzy
 msgid "If `quarkus.oidc.authentication.cookie-path-header` is set but no configured HTTP header is available in the current request then the `quarkus.oidc.authentication.cookie-path` will be checked."
-msgstr ""
+msgstr "`quarkus.oidc.authentication.cookie-path-header` が設定されているが、現在のリクエストで設定された HTTP ヘッダーが利用できない場合、 `quarkus.oidc.authentication.cookie-path` がチェックされます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:292
@@ -1068,8 +1070,9 @@ msgstr "OIDC `CodeAuthenticationMechanism` はデフォルトの `io.quarkus.oid
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:453
+#, fuzzy
 msgid "Note that some endpoints do not require the access token. An access token is only required if the endpoint needs to retrieve `UserInfo` or access the downstream service with this access token or use the roles associated with the access token (the roles in the ID token are checked by default). In such cases you can set either `quarkus.oidc.state-session-manager.strategy=id-refresh-token` (keep ID and refresh tokens only) or `quarkus.oidc.state-session-manager.strategy=id-token` (keep ID token only)."
-msgstr ""
+msgstr "エンドポイントによっては、アクセストークンを必要としないものもあることに注意してください。アクセストークンが必要なのは、エンドポイントが `UserInfo` を取得したり、このアクセストークンを使用してダウンストリームサービスにアクセスしたり、アクセストークンに関連付けられたロールを使用する必要がある場合のみです（IDトークンのロールはデフォルトでチェックされています）。このような場合は、 `quarkus.oidc.state-session-manager.strategy=id-refresh-token` （IDトークンとリフレッシュ・トークンのみを保持）または `quarkus.oidc.state-session-manager.strategy=id-token` （IDトークンのみを保持）のいずれかを設定することができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:456
