--- a/l10n/po/ja_JP/_guides/validation.adoc.po
+++ b/l10n/po/ja_JP/_guides/validation.adoc.po
@@ -733,29 +733,33 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/validation.adoc:362
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Validation groups for REST endpoint or service method validation"
-msgstr ""
+msgstr "RESTエンドポイントまたはサービスメソッドの検証グループ"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:366
+#, fuzzy
 msgid "It's sometimes necessary to enable different validation constraints for the same class when it's passed to a different method."
-msgstr ""
+msgstr "同じクラスが別のメソッドに渡されたときに、異なる検証制約を有効にする必要があることがあります。"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:371
+#, fuzzy
 msgid "For example, a `Book` may need to have a `null` identifier when passed to the `put` method (because the identifier will be generated), but a non-`null` identifier when passed to the `post` method (because the method needs the identifier to know what to update)."
-msgstr ""
+msgstr "例えば、 `Book` は、 `put` メソッドに渡されたときには `null` の識別子が必要ですが（識別子が生成されるため）、 `post` メソッドに渡されたときには `null` 以外の識別子が必要です（何を更新すべきかを知るためにメソッドが識別子を必要とするため）。"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:374
+#, fuzzy
 msgid "To address this, you can take advantage of validation groups.  Validation groups are markers that you put on your constraints in order to enable or disable them at will."
-msgstr ""
+msgstr "これに対処するために、検証グループを利用することができます。バリデーション・グループは、制約を有効または無効にするために制約に付けるマーカーです。"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:376
+#, fuzzy
 msgid "First, define the `Put` and `Post` groups, which are just Java interfaces."
-msgstr ""
+msgstr "まず、 `Put` と `Post` グループを定義します。"
 
 #. type: delimited block -
 #: upstream/_guides/validation.adoc:385
@@ -771,13 +775,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:390
+#, fuzzy
 msgid "Make the custom groups extend the `Default` group.  This means that whenever these groups are enabled, the `Default` group is also enabled.  This is useful if you have constraints that you want validated in both the `Put` and `Post` method: you can simply use the default group on those constraints, like on the `title` property below."
-msgstr ""
+msgstr "カスタムグループを `Default` グループを拡張するようにします。これは、これらのグループが有効になっているときはいつでも、 `Default` グループも有効になることを意味します。これは、 `Put` と `Post` メソッドの両方で検証したい制約がある場合に便利です。以下の `title` プロパティのように、それらの制約に対してデフォルトのグループを使用するだけです。"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:392
+#, fuzzy
 msgid "Then add the relevant constraints to `Book`, assigning the right group to each constraint:"
-msgstr ""
+msgstr "次に、関連する制約を `Book` に追加し、各制約に適切なグループを割り当てます。"
 
 #. type: delimited block -
 #: upstream/_guides/validation.adoc:400
@@ -798,8 +804,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:408
+#, fuzzy
 msgid "Finally, add a `@ConvertGroup` annotation next to your `@Valid` annotation in your validated method."
-msgstr ""
+msgstr "最後に、検証済みメソッドの `@Valid` アノテーションの横に `@ConvertGroup` アノテーションを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/validation.adoc:417
@@ -827,13 +834,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:428
+#, fuzzy
 msgid "Enable the `Put` group, meaning only constraints assigned to the `Put` (and `Default`) groups will be validated for the `book` parameter of the `put` method.  In this case, it means `Book.id` must be `null` and `Book.title` must not be blank."
-msgstr ""
+msgstr "`Put` グループを有効にします。これは、 `Put` (および `Default`) グループに割り当てられた制約のみが、 `put` メソッドの `book` パラメータに対して検証されることを意味します。この場合、 `Book.id` は `null` でなければならず、 `Book.title` は空白であってはならないことを意味します。"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:431
+#, fuzzy
 msgid "Enable the `Post` group, meaning only constraints assigned to the `Post` (and `Default`) groups will be validated for the `book` parameter of the `post` method.  In this case, it means `Book.id` must not be `null` and `Book.title` must not be blank."
-msgstr ""
+msgstr "`Post` グループを有効にします。これは、 `Post` (および `Default`) グループに割り当てられた制約のみが、 `post` メソッドの `book` パラメータに対して検証されることを意味します。この場合、 `Book.id` は `null` であってはならず、 `Book.title` は空白であってはならないことを意味します。"
 
 #. type: Title ==
 #: upstream/_guides/validation.adoc:433
