--- a/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
@@ -956,38 +956,45 @@ msgstr "Mavenを使って新しい拡張モジュールを作成する"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:475
+#, fuzzy
 msgid "Quarkus provides `create-extension` Maven Mojo to initialize your extension project."
-msgstr ""
+msgstr "Quarkusは、 `create-extension` Maven Mojoを提供し、拡張プロジェクトを初期化します。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:477
+#, fuzzy
 msgid "It will try to auto-detect its options:"
-msgstr ""
+msgstr "オプションを自動検出しようとします。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:479
+#, fuzzy
 msgid "from `quarkus` (Quarkus Core) or `quarkus/extensions` directory, it will use the 'Quarkus Core' extension layout and defaults."
-msgstr ""
+msgstr "`quarkus` (Quarkus Core) または `quarkus/extensions` ディレクトリからアクセスすると、「Quarkus Core」拡張機能のレイアウトとデフォルトが使用されます。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:480
+#, fuzzy
 msgid "with `-DgroupId=io.quarkiverse.[extensionId]`, it will use the 'Quarkiverse' extension layout and defaults."
-msgstr ""
+msgstr "`-DgroupId=io.quarkiverse.[extensionId]` を使用すると、'Quarkiverse' 拡張機能のレイアウトとデフォルトを使用します。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:481
+#, fuzzy
 msgid "in other cases it will use the 'Standalone' extension layout and defaults."
-msgstr ""
+msgstr "それ以外の場合は 'Standalone' 拡張モジュールのレイアウトとデフォルトを使用します。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:482
+#, fuzzy
 msgid "we may introduce other layout types in the future."
-msgstr ""
+msgstr "将来的には他のレイアウトタイプを紹介するかもしれません。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:484
+#, fuzzy
 msgid "You may not specify any parameter to use the interactive mode: `mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create-extension -N`"
-msgstr ""
+msgstr "インタラクティブモードを使用するためのパラメータを指定することはできません。 `mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create-extension -N`"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:486
@@ -1008,8 +1015,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:497
+#, fuzzy
 msgid "by default, the `groupId`, `version`, `quarkusVersion`, `namespaceId`, and `namespaceName` will be consistent with other Quarkus core extensions."
-msgstr ""
+msgstr "デフォルトでは、 `groupId`, `version`, `quarkusVersion`, `namespaceId`, `namespaceName` は、他のQuarkusコアの拡張機能と整合性が取れています。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:499
