--- a/l10n/po/ja_JP/_guides/writing-native-applications-tips.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-native-applications-tips.adoc.po
@@ -357,8 +357,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/writing-native-applications-tips.adoc:176
+#, fuzzy
 msgid "If your class is in a third-party jar, you can do it by using an empty class that will host the `@RegisterForReflection` for it."
-msgstr ""
+msgstr "クラスがサードパーティの jar にある場合は、そのクラスの `@RegisterForReflection` をホストする空のクラスを使用することで行うことができます。"
 
 #. type: delimited block -
 #: upstream/_guides/writing-native-applications-tips.adoc:182
@@ -371,8 +372,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/writing-native-applications-tips.adoc:185
+#, fuzzy
 msgid "Note that `MyClass` will be registered for reflection but not `MyReflectionConfiguration`."
-msgstr ""
+msgstr "`MyClass` は反映のために登録されますが、 `MyReflectionConfiguration` ではないことに注意してください。"
 
 #. type: Title ====
 #: upstream/_guides/writing-native-applications-tips.adoc:186
