--- a/l10n/po/ja_JP/_guides/spring-di.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-di.adoc.po
@@ -227,8 +227,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/spring-di.adoc:111
+#, fuzzy
 msgid "As a Spring developer, you might be tempted to add the `@ComponentScan` annotation in order to define specific packages to scan for additional beans. Do note that `@ComponentScan` is entirely unnecessary since Quarkus performs https://quarkus.io/guides/cdi-reference#bean_discovery[bean discovery] only in `annotated` mode with no visibility boundaries. Moreover, note that the bean discovery in Quarkus happens at build time.  In the same vein, Quarkus does not support the Spring `@Import` annotation."
-msgstr ""
+msgstr "Springの開発者であれば、追加のビーンをスキャンする特定のパッケージを定義するために、 `@ComponentScan` アノテーションを追加したくなるかもしれません。 `@ComponentScan` は全く不要であることに注意してください。なぜなら、Quarkusは可視性の境界線のない `annotated` モードでのみ link:https://quarkus.io/guides/cdi-reference#bean_discovery[ビーン]の検出を実行するからです。さらに、Quarkusでのビーンの検出は、ビルド時に行われることに注意してください。同様に、QuarkusはSpring `@Import` アノテーションをサポートしていません。"
 
 #. type: Plain text
 #: upstream/_guides/spring-di.adoc:115
@@ -545,8 +546,9 @@ msgstr "重要な技術的注意事項"
 
 #. type: Plain text
 #: upstream/_guides/spring-di.adoc:283
+#, fuzzy
 msgid "Please note that the Spring support in Quarkus does not start a Spring Application Context nor are any Spring infrastructure classes run.  Spring classes and annotations are only used for reading metadata and / or are used as user code method return types or parameter types.  What that means for end users, is that adding arbitrary Spring libraries will not have any effect. Moreover Spring infrastructure classes (like `org.springframework.beans.factory.config.BeanPostProcessor` , `org.springframework.context.ApplicationContext` for example) will not be executed.  Regarding the dependency injection in particular, Quarkus uses a Dependency Injection mechanism (called ArC) based on the https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html[Contexts and Dependency Injection for Java 2.0] specification. If you want to learn more about it we recommend you to read the https://quarkus.io/guides/cdi[Quarkus introduction to CDI] and the https://quarkus.io/guides/cdi-reference#arc-configuration-reference[CDI reference guide] The various Spring Boot test features are not supported by Quarkus. For testing purposes, please, check the https://quarkus.io/guides/getting-started-testing[Quarkus testing guide]."
-msgstr ""
+msgstr "QuarkusのSpringサポートは、Springアプリケーションコンテキストを起動したり、Springインフラストラクチャクラスを実行したりしないことに注意してください。Springクラスやアノテーションは、メタデータの読み込みや、ユーザーコードのメソッドの戻り値の型やパラメータの型として使用されるだけです。これはエンドユーザーにとって何を意味するかというと、任意のSpringライブラリを追加しても何の効果もないということです。また、Springのインフラストラクチャクラス（例えば、 `org.springframework.beans.factory.config.BeanPostProcessor`, `org.springframework.context.ApplicationContext` ）は実行されません。特に依存性インジェクションに関しては、Quarkusは link:https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html[Contexts and Dependency Injection for Java 2.0]仕様に基づいた依存性インジェクションメカニズム（ArCと呼ばれる）を使用しています。これについて詳しく知りたい場合は、 link:https://quarkus.io/guides/cdi[QuarkusのCDI入門]と link:https://quarkus.io/guides/cdi-reference#arc-configuration-reference[CDIリファレンスガイド]を読むことをお勧めします。 様々なSpring Bootテスト機能はQuarkusではサポートされていません。テストを目的とする場合は、Quark link:https://quarkus.io/guides/getting-started-testing[usのテストガイド]をご確認ください。"
 
 #. type: Title ==
 #: upstream/_guides/spring-di.adoc:284
@@ -702,21 +704,21 @@ msgstr "コンポーネント"
 
 #. type: Table
 #: upstream/_guides/spring-di.adoc:331
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Doesn't have a one-to-one mapping to a CDI annotation. It is not used in Quarkus because Quarkus does all classpath scanning at build time."
-msgstr ""
+msgstr "CDIアノテーションへの1対1のマッピングはありません。Quarkusはビルド時にすべてのクラスパスのスキャンを行うため、Quarkusでは使用されません。"
 
 #. type: Table
 #: upstream/_guides/spring-di.adoc:332
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "@Import"
-msgstr ""
+msgstr "インポート"
 
 #. type: Table
 #: upstream/_guides/spring-di.adoc:334
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Doesn't have a one-to-one mapping to a CDI annotation."
-msgstr ""
+msgstr "CDIアノテーションへの一対一のマッピングを持っていません。"
 
 #. type: Title ==
 #: upstream/_guides/spring-di.adoc:336
