--- a/l10n/po/ja_JP/_guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_guides/vault.adoc.po
@@ -599,8 +599,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/vault.adoc:331
+#, fuzzy
 msgid "The MicroProfile _Vault Config Source_ is configured with ordinal `270`, which is higher than the file system or jar ordinals, but lower than environment variables.  This value can be changed using property `quarkus.vault.config-ordinal`."
-msgstr ""
+msgstr "MicroProfile _Vault Config Source_は、ファイルシステムや jar の序列よりも高く、環境変数よりも低い序列 `270` で構成されています。この値は、プロパティ `quarkus.vault.config-ordinal` を使用して変更できます。"
 
 #. type: Title ==
 #: upstream/_guides/vault.adoc:333
