Update translation stats

--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc.po, 0, 54, 0, 764 ,100%
 l10n/po/ja_JP/_posts/2021-02-11-quarkus-1-11-3-final-released.adoc.po, 0, 13, 0, 162 ,100%
 l10n/po/ja_JP/_posts/2021-02-10-resteasy-reactive-faq.adoc.po, 0, 60, 0, 2097 ,100%
 l10n/po/ja_JP/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc.po, 0, 18, 0, 168 ,100%
