Apply translation memory

--- a/l10n/po/ja_JP/get-started.md.po
+++ b/l10n/po/ja_JP/get-started.md.po
@@ -171,7 +171,7 @@ msgstr ""
 #. type: Bullet: '* '
 #: upstream/get-started.md:48
 msgid "A quick glance at the Quarkus engine and how it enables reactive"
-msgstr ""
+msgstr "Quarkusエンジンの概要と、それがどのようにリアクティブを可能にしているかを簡単に説明します。"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:48
