--- a/l10n/po/ja_JP/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc.po
@@ -69,7 +69,7 @@ msgstr ""
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:19
 #, no-wrap
 msgid "Migration Guide"
-msgstr ""
+msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:22
@@ -80,7 +80,7 @@ msgstr ""
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:23
 #, no-wrap
 msgid "What's new?"
-msgstr ""
+msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:25
@@ -155,7 +155,7 @@ msgstr ""
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:66
 #, no-wrap
 msgid "RESTEasy Reactive"
-msgstr ""
+msgstr "RESTEasy Reactive"
 
 #. type: delimited block =
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:70
@@ -248,7 +248,7 @@ msgstr ""
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:106
 #, no-wrap
 msgid "Full Changelog"
-msgstr ""
+msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:109
@@ -259,23 +259,23 @@ msgstr ""
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:110
 #, no-wrap
 msgid "ADOPTERS.md"
-msgstr ""
+msgstr "ADOPTERS.md"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:113
 msgid "To share stories about Quarkus usage, we added https://github.com/quarkusio/quarkus/blob/master/ADOPTERS.md[an `ADOPTERS.md` file] at the root of the repository."
-msgstr ""
+msgstr "Quarkusの使用に関する情報を共有するために、リポジトリのルートに https://github.com/quarkusio/quarkus/blob/master/ADOPTERS.md[ADOPTERS.mdファイル]を追加しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:115
 msgid "If you are using Quarkus and would like to be interviewed on our blog or simply added to this file, please contact us and we will be happy to oblige."
-msgstr ""
+msgstr "Quarkusをご利用の方で、ブログで取材を受けたい方や、このファイルに単純に追加したい方は、ご連絡いただければ、喜んでお受けいたします。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:116
 #, no-wrap
 msgid "Contributors"
-msgstr ""
+msgstr "貢献者"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:120
@@ -291,34 +291,34 @@ msgstr ""
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:123
 #, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:126
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:128
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:130
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:131
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:132
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:132
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
